--- a/_config.yml
+++ b/_config.yml
@@ -10,4 +10,4 @@ github_username:  syzwina # DO NOT include the @ character, or else the build wi
 
 show_excerpts: true # set to false to remove excerpts on the homepage
 
-theme: mediator
+theme: minima
